Fix broken QFlatSet insertion

- Use the iterator returned from insert() instead of reusing the
existing iterator because it might be invalidated
- dont cache begin(), end(). They make it very easy to write wrong code
because begin()/end() might be different post insertion.

BUG: 509673